# ironbars

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  index.md  usage.md
docs/examples/results/: diabetes_metadata.json
examples/: example_analyzer.py
examples/results/: diabetes_metadata.csv
ironbars/core/: analyzer.py
search/: search_index.json
src/ironbars/: __init__.py
tests/: test_analyzer.py
usage/: index.html
